@@ -229,6 +229,10 @@ ACCESS_LEVEL_PLAY_INVITED 20
 
 ACCESS_LEVEL_CHAT 20
 
+# To be able to shout (chat so everyone sees it), you need at least this level:
+
+ACCESS_LEVEL_SHOUT 20
+
 # If you don't have that, everyone on the server will be reminded
 # that you want to chat at most every
 
