@@ -191,6 +191,10 @@ PREFIX_SPAM_NUMBER_KNOWN_PREFIXES_MULTIPLIER 1.0 # Multiplier applied to the num
 PREFIX_SPAM_REQUIRED_SCORE 10.0                  # The required prefix spam score a prefix must have for it to be considered spam.
 PREFIX_SPAM_TIMEOUT_MULTIPLIER 15.0              # Multiplier applied to time calculation to determine how long a known prefix is remembered.
 
+# shouting
+
+DEFAULT_SHOUT_SPECTATOR 1     # set to 0 to make the default chat action for spectators chat only visible to spectators. 
+DEFAULT_SHOUT_PLAYER 1        # set to 0 to make the default chat action for players team chat.
 # voting
 
 ALLOW_VOTING 1           # allow voting?
