@@ -680,7 +680,18 @@ static void se_AdminLogin_ReallyOnlyCallFromChatKTHNXBYE( ePlayerNetID * p )
 #endif
 #endif
 
+// flags indicating whether shouting should be the default chat action; if not, it's /team.
+static bool se_shoutSpectator=true;
+tSettingItem< bool > se_shoutSpectatorConf( "DEFAULT_SHOUT_SPECTATOR", se_shoutSpectator );
+static bool se_shoutPlayer=true;
+tSettingItem< bool > se_shoutPlayerConf( "DEFAULT_SHOUT_PLAYER", se_shoutPlayer );
+
 #ifdef KRAWALL_SERVER
+// minimal access level to shout
+static tAccessLevel se_shoutAccessLevel = tAccessLevel_Program;
+static tSettingItem< tAccessLevel > se_shoutAccessLevelConf( "ACCESS_LEVEL_SHOUT", se_shoutAccessLevel );
+static tAccessLevelSetter se_shoutAccessLevelConfLevel( se_shoutAccessLevelConf, tAccessLevel_Owner );
+
 // minimal access level to play
 static tAccessLevel se_playAccessLevel = tAccessLevel_Program;
 static tSettingItem< tAccessLevel > se_playAccessLevelConf( "ACCESS_LEVEL_PLAY", se_playAccessLevel );
@@ -2946,9 +2957,40 @@ bool IsSilencedWithWarning( ePlayerNetID const * p )
     return false;
 }
 
+// returns true if the player is allowed to shout
+static bool se_CheckAccessLevelShoutNoWarn( ePlayerNetID * p )
+{
+#ifdef KRAWALL_SERVER
+    // check if the player has the right to shout
+    return p->GetAccessLevel() <= se_shoutAccessLevel;
+#else
+    return true;
+#endif
+}
+
+// returns true if the player is allowed to shout
+static bool se_CheckAccessLevelShout( ePlayerNetID * p )
+{
+    if( !se_CheckAccessLevelShoutNoWarn( p ) )
+    {
+        sn_ConsoleOut( tOutput("$access_level_shout_denied" ), p->Owner() );
+        return false;
+    }
+    else
+    {
+        return true;
+    }
+}
+
 // /me chat commant
 static void se_ChatMe( ePlayerNetID * p, std::istream & s, eChatSpamTester & spam )
 {
+    // check for global chat access right
+    if ( !se_CheckAccessLevelShout( p ) )
+    {
+        return;
+    }
+
     if ( IsSilencedWithWarning(p) || spam.Block() )
     {
         return;
@@ -3013,8 +3055,43 @@ tSettingItem< bool > se_coloredTeamConf( "FILTER_COLOR_TEAM", se_filterColorTeam
 static bool se_filterDarkColorTeam=false;
 tSettingItem< bool > se_coloredDarkTeamConf( "FILTER_DARK_COLOR_TEAM", se_filterDarkColorTeam );
 
+// regular chat; reaches all players
+static void se_ChatShout( ePlayerNetID * p, tString const & say, eChatSpamTester & spam )
+{
+    if ( !se_CheckAccessLevelShout( p ) )
+    {
+        return;
+    }
+
+    // check for spam
+    if ( spam.Block() )
+    {
+        return;
+    }
+
+    if ( ( say.Len() <= se_SpamMaxLen+2 || p->GetAccessLevel() <= se_spamAccessLevel ) && !IsSilencedWithWarning(p) )
+    {
+        se_BroadcastChat( p, say );
+        se_DisplayChatLocally( p, say);
+        
+        tString s;
+        s << p->GetUserName() << ' ' << say;
+        se_SaveToChatLog(s);
+    }
+}
+
+static void se_ChatShout( ePlayerNetID * p, std::istream & s, eChatSpamTester & spam )
+{
+    // parse string
+    tString say;
+    say.ReadLine( s );
+    
+    // delegate
+    se_ChatShout( p, say, spam );
+}
+
 // /team chat commant: talk to your team
-static void se_ChatTeam( ePlayerNetID * p, std::istream & s, eChatSpamTester & spam )
+static void se_ChatTeam( ePlayerNetID * p, tString msg, eChatSpamTester & spam )
 {
     eTeam *currentTeam = se_GetManagedTeam( p );
 
@@ -3027,9 +3104,6 @@ static void se_ChatTeam( ePlayerNetID * p, std::istream & s, eChatSpamTester & s
     {
         return;
     }
-
-    tString msg;
-    msg.ReadLine( s );
 
     // Apply filters if we don't already
     if ( se_filterColorTeam )
@@ -3091,6 +3165,15 @@ static void se_ChatTeam( ePlayerNetID * p, std::istream & s, eChatSpamTester & s
             }
         }
     }
+}
+
+// /team chat commant: talk to your team
+static void se_ChatTeam( ePlayerNetID * p, std::istream & s, eChatSpamTester & spam )
+{
+    tString msg;
+    msg.ReadLine( s );
+
+    se_ChatTeam( p, msg, spam );
 }
 
 // /msg chat commant: talk to anyone team
@@ -3724,6 +3807,13 @@ void se_ChatHandlerServer( unsigned short id, tColoredString const & say, nMessa
                         se_ChatTeam( p, s, spam );
                         return;
                     }
+                    else if (command == "/shout")
+                    {
+                        spam.lastSaidType_ = eChatMessageType_Public;
+                        spam.say_ = spam.say_.SubStr(7); // cut /shout prefix
+                        se_ChatShout( p, s, spam );
+                        return;
+                    }
                     else if (command == "/msg" ) {
                         spam.lastSaidType_ = eChatMessageType_Private;
                         se_ChatMsg( p, s, spam );
@@ -3780,21 +3870,16 @@ void se_ChatHandlerServer( unsigned short id, tColoredString const & say, nMessa
 #endif
             }
 
-            // check for spam
-            if ( spam.Block() )
-            {
-                return;
-            }
-
             // well, that leaves only regular, boring chat.
-            if ( ( say.Len() <= se_SpamMaxLen+2 || p->GetAccessLevel() <= se_spamAccessLevel ) && !IsSilencedWithWarning(p) )
+            if( ( se_GetManagedTeam( p ) ? se_shoutPlayer : se_shoutSpectator ) && se_CheckAccessLevelShoutNoWarn( p ) )
             {
-                se_BroadcastChat( p, say );
-                se_DisplayChatLocally( p, say);
-
-                tString s;
-                s << p->GetUserName() << ' ' << say;
-                se_SaveToChatLog(s);
+                // if it's the default and the player is allowed to, shout it out
+                se_ChatShout( p, say, spam );
+            }
+            else
+            {
+                // otherwise, fall back to team chat.
+                se_ChatTeam( p, say, spam );
             }
         }
     }
